--- a/static/style.css
+++ b/static/style.css
@@ -143,7 +143,7 @@ main {
     transform-origin: 100% 0
 }
 .philosopher.active img{
-    transform: scale(-1)
+    transform: scale(-1) !important
 }
 .philosopher-trigger {
     background: none;
